--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,5 +1,5 @@
 {% extends 'base/base.html' %}
-{% block title %} Home {% endblock %}
+{% block title %} Gold/Silver Calculator | HomePage {% endblock %}
 {% block styles %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/homepage.css') }}">
 {% endblock %}
