--- a/templates/ext/navbar.html
+++ b/templates/ext/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-custom">
-    <a class="navbar-brand" href="/">
+    <a class="navbar-brand" href="{{ url_for('home') }}">
         <i class="fas fa-home"></i>
         Home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
