--- a/templates/ext/navbar.html
+++ b/templates/ext/navbar.html
@@ -1,9 +1,32 @@
 <nav class="navbar navbar-expand-lg navbar-custom">
     <a class="navbar-brand" href="{{ url_for('home') }}">
         <i class="fas fa-home"></i>
-        Home</a>
+        Home
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
     </button>
-    
+
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+            {% if current_user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('dashboard') }}">Hi, {{current_user.fname}}</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('dashboard') }}">Dashboard</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                </li>
+            {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('register') }}">Sign Up</a>
+                </li>
+            {% endif %}
+        </ul>
+    </div>
 </nav>
