chore: :books: features page updated for up to date info

--- a/templates/features.html
+++ b/templates/features.html
@@ -40,5 +40,14 @@
         <p>Tailor the calculator to meet specific business requirements, including custom branding and additional
             features.</p>
     </div>
+
+    <div class="feature">
+        <h2>Multi Level Authentication</h2>
+        <p>Implement multi-level authentication to ensure secure access to the application.</p>
+    </div>
+
+    <div class="feature">
+        <h2>Search History Records</h2>
+        <p>Keep a record of search history for admin to review and manage their calculations.</p>
 </div>
 {% endblock %}
