chroe: :sparkles: admin dashboard features added

--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -38,9 +38,8 @@
     <div class="admin-tools">
         <h3>Admin Tools</h3>
         <ul>
-            <li><a href="{{ url_for('manage_users') }}">Manage Users</a></li>
+            <li><a href="{{ url_for('manage_users') }}">User Management</a></li>
             <li><a href="{{ url_for('history') }}">History</a></li>
-            <li><span class="disabled-link">User Management</span></li>
             <li><span class="disabled-link">System Settings</span></li>
             <li><span class="disabled-link">Audit Logs</span></li>
         </ul>
