chore: :sparkles: option added for system settings

--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -40,7 +40,7 @@
         <ul>
             <li><a href="{{ url_for('manage_users') }}">User Management</a></li>
             <li><a href="{{ url_for('history') }}">History</a></li>
-            <li><span class="disabled-link">System Settings</span></li>
+            <li><a href="{{ url_for('settings') }}">System Settings</a></li>
             <li><span class="disabled-link">Audit Logs</span></li>
         </ul>
     </div>
