chore: :sparkles: audit logs added

--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -41,7 +41,7 @@
             <li><a href="{{ url_for('manage_users') }}">User Management</a></li>
             <li><a href="{{ url_for('history') }}">History</a></li>
             <li><a href="{{ url_for('settings') }}">System Settings</a></li>
-            <li><span class="disabled-link">Audit Logs</span></li>
+            <li><a href="{{ url_for('audit_log') }}">Audit Logs</a></li>
         </ul>
     </div>
 </div>
