--- a/templates/audit_log.html
+++ b/templates/audit_log.html
@@ -12,6 +12,7 @@
                 <tr>
                     <th>ID</th>
                     <th>User ID</th>
+                    <th>Username</th>
                     <th>Action</th>
                     <th>Details</th>
                     <th>Timestamp</th>
@@ -22,6 +23,7 @@
                 <tr>
                     <td>{{ log.id }}</td>
                     <td>{{ log.user_id }}</td>
+                    <td>{{ log.username }}</td>
                     <td>{{ log.action }}</td>
                     <td>{{ log.details }}</td>
                     <td>{{ log.timestamp }}</td>
