--- a/static/css/admin_dashboard.css
+++ b/static/css/admin_dashboard.css
@@ -2,13 +2,20 @@
     padding: 20px;
     background-color: #f7f7f7;
     border-radius: 8px;
-    margin-top: 80px;
+    margin-top: 50px;
 }
 
 .dashboard-title {
     font-size: 2.5em;
     color: #333;
     margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.dashboard-title i {
+    margin-right: 10px;
+    color: #007bff;
 }
 
 .welcome-message {
@@ -19,6 +26,7 @@
 
 .stats-cards {
     display: flex;
+    flex-wrap: wrap;
     gap: 20px;
     margin-bottom: 30px;
 }
@@ -28,8 +36,15 @@
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    flex: 1;
+    flex: 1 1 calc(33% - 40px);
     text-align: center;
+    position: relative;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
 }
 
 .card h3 {
@@ -44,10 +59,22 @@
     color: #333;
 }
 
+.card-icon {
+    font-size: 3em;
+    color: #007bff;
+    margin-bottom: 15px;
+}
+
 .admin-tools h3 {
     font-size: 1.8em;
     margin-bottom: 15px;
     color: #007bff;
+    display: flex;
+    align-items: center;
+}
+
+.admin-tools h3 i {
+    margin-right: 10px;
 }
 
 .admin-tools ul {
@@ -64,6 +91,12 @@
     color: #007bff;
     font-size: 1.2em;
     transition: color 0.3s ease-in-out;
+    display: flex;
+    align-items: center;
+}
+
+.admin-tools ul li a i {
+    margin-right: 8px;
 }
 
 .admin-tools ul li a:hover {
@@ -77,9 +110,9 @@
 }
 
 .disabled-link:hover {
-    text-decoration: none; /* Prevents underline on hover */
+    text-decoration: none;
 }
 
 .disabled-link:focus {
-    outline: none; /* Prevents focus outline */
+    outline: none;
 }
