--- a/templates/gold_calculator.html
+++ b/templates/gold_calculator.html
@@ -1,15 +1,15 @@
 {% extends "base/base.html" %}
-{% block title %} Gold Price Calculator {% endblock %}
+{% block title %}Gold Price Calculator{% endblock %}
 {% block styles %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/calculator.css') }}">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 {% endblock %}
 {% block content %}
 <div class="container">
     <!-- Main Content -->
     <div class="main-content">
-        <!-- Calculator Form -->
         <h1>Gold Price Calculator</h1>
-        <p class="text-center">It's quick, easy, and accurate! with a clear and intuitive design.</p>
+        <p class="text-center">Get accurate gold price estimates quickly and easily.</p>
         <form action="/gold-calculator" method="POST" class="form-card shadow p-4 bg-white rounded">
             
             <div class="form-group">
@@ -40,6 +40,7 @@
                 <label for="tax">Tax (%): <i class="fa-solid fa-file-invoice-dollar"></i></label>
                 <input type="number" step="0.01" name="tax" id="tax" class="form-control" placeholder="Enter tax percentage" value="{{ tax }}" required>
             </div>
+            
             <button type="submit" class="btn btn-hero btn-block mt-4">Generate Estimate Bill</button>
             <a href="{{ url_for('history') }}" class="btn btn-hero mt-4">Previous History</a>
         </form>
@@ -54,7 +55,7 @@
         <p><strong>Email:</strong> {{ config["JEWELLER_EMAIL"] }}</p>
         <p><strong>Website:</strong> {{ config["JEWELLER_WEBSITE"] }}</p>
         <p><strong>GSTIN:</strong> {{ config["JEWELLER_GSTIN"] }}</p>
-        <p><strong>Gold Rate(Per gm):</strong> ₹ {{ price_per_gram }} </p>
+        <p><strong>Gold Rate (Per gm):</strong> ₹ {{ price_per_gram }}</p>
     </div>
 </div>
 {% endblock %}
