--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,7 +1,8 @@
 {% extends 'base/base.html' %}
-{% block title %} Gold/Silver Calculator | HomePage {% endblock %}
+{% block title %}Gold/Silver Calculator | HomePage{% endblock %}
 {% block styles %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/homepage.css') }}">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 {% endblock %}
 {% block content %}
 <div class="hero mt-4">
@@ -17,7 +18,6 @@
                 <a href="{{ url_for('history') }}" class="btn btn-hero"><i class="fa-solid fa-money-check-dollar"></i> History</a>
             {% endif %}
         {% endif %}
-
     </div>
 </div>
 {% endblock %}
